<resources>
    <string name="app_name"><![CDATA[Free Ringtones 2020]]></string>
    <string name="action_done">Done</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="title_bucket">Bucket</string>
    <string name="title_bill">Bill</string>
    <string name="candy">Candy</string>
    <string name="popcorn">Popcorn</string>
    <string name="coffee">Coffee</string>
    <string name="other">Other</string>
    <string name="imported">Imported</string>
    <string name="error_mendatory_field">All fields are mandatory</string>

    //
    <string name="title_download"><![CDATA[Downloads]]></string>
    <string name="title_favorite"><![CDATA[Favorites]]></string>
    <string name="re_title"><![CDATA[Request new ringtone]]></string>
    <string name="menu_set"><![CDATA[Set]]></string>
    <string name="privacy_policy"><![CDATA[Privacy Policy]]></string>
    <string name="share_app"><![CDATA[Share the app]]></string>
    <string name="reset_ringtone_menu"><![CDATA[Reset all ringtones to default]]></string>
    <string name="show_notification"><![CDATA[Show notification]]></string>

    <string name="msg_make_with_love"><![CDATA[Made with love just for you!]]></string>
    <string name="more_apps"><![CDATA[More Apps]]></string>
    <string name="contact_us"><![CDATA[Contact Us]]></string>

    <string name="contact_email" translatable="false">crystahoger25@gmail.com</string>

</resources>
